--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
+    "image-webpack-loader": "^3.4.2",
     "node-sass": "^4.6.1",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
