--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
+    "styled-components": "^2.2.3",
     "webpack": "^3.8.1",
     "webpack-dashboard": "^1.0.2",
     "webpack-dev-server": "^2.9.4"
