--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
+    "windows": "SET NODE_ENV=development & node server.js --hot",
     "start": "NODE_ENV=development node server.js --hot",
     "build": "webpack"
   },
@@ -39,6 +40,7 @@
     "babel-plugin-react": "^1.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "image-webpack-loader": "^3.4.2",
