--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A simple reddit client built with React",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "jest --updateSnapshot",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "windows": "SET NODE_ENV=development & node server.js --hot",
     "start": "NODE_ENV=development node server.js --hot",
     "build": "webpack",
@@ -35,9 +37,13 @@
     "redux": "^3.7.2"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^3.2.16",
+    "@storybook/addon-links": "^3.2.16",
+    "@storybook/react": "^3.2.16",
     "autoprefixer": "^7.1.6",
     "axios": "^0.17.1",
     "babel-core": "^6.26.0",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-react": "^1.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -46,9 +52,11 @@
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "image-webpack-loader": "^3.4.2",
+    "jest": "^21.2.1",
     "node-sass": "^4.6.1",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
+    "react-test-renderer": "^16.1.1",
     "redux-devtools": "^3.4.1",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
@@ -56,10 +64,7 @@
     "styled-components": "^2.2.3",
     "webpack": "^3.8.1",
     "webpack-dashboard": "^1.0.2",
-    "webpack-dev-server": "^2.9.4",
-    "@storybook/react": "^3.2.16",
-    "@storybook/addon-actions": "^3.2.16",
-    "@storybook/addon-links": "^3.2.16"
+    "webpack-dev-server": "^2.9.4"
   },
   "browserslist": [
     "> 1%",
